# graphrag-lab

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
configs/: base.yaml
configs/experiments/: all_frameworks.yaml  chunking_strategy.yaml  cost_analysis.yaml  domain_specific.yaml  eval_test.yaml  framework_comparison.yaml  full_benchmark.yaml  indexing_cost_zero.yaml  llm_provider.yaml  neo4j_search_strategies.yaml  nextgen_comparison.yaml  quick_test.yaml  search_strategy.yaml
data/sample/: article_01.txt  article_02.txt  article_03.txt
docs/: benchmark.md  ecosystem.md
scripts/: benchmark_smoke.py
src/graphrag_lab/: __init__.py  cli.py
src/graphrag_lab/config/: __init__.py  loader.py  schema.py
src/graphrag_lab/datasets/: manager.py
src/graphrag_lab/evaluation/: cost.py  judge.py  metrics.py
src/graphrag_lab/frameworks/: __init__.py  base.py  cognee.py  datastax.py  fast.py  graphiti.py  hipporag.py  lightrag.py  linearrag.py  microsoft.py  nano.py  neo4j.py  pathrag.py  raganything.py
src/graphrag_lab/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/graphrag_lab/runner/: experiment.py  sweep.py
src/graphrag_lab/utils/: io.py  logging.py  tokens.py
tests/: conftest.py  test_config.py  test_evaluation.py  test_runner.py
